update  authentication  component

--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -73,6 +73,8 @@
                     Connexion
                 </button>
 
+                <p> je  suis  pas  encore inscrit !  </p>
+
             </div>
 
 
