--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -47,11 +47,11 @@
                 <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
                     <div *ngIf="f['password'].errors['required']" class="center"> Votre Mot de passe est requis</div>
                     <div *ngIf="f['password'].errors['maxlength']" class="center">
-                        votre Mot De passe ne doit pas dépasser 20 charctéres
+                     Mot de passe est incorrecte
                     </div>
 
                     <div *ngIf="f['password'].errors['minlength']" class="center">
-                        votre Mot de passe doit avoir au minimum de 6 charctéres
+                       Mot de passe est incorrecte
                     </div>
 
 
