check existing  email  before    send  the    admin  information

--- a/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/sign-up/sign-up.component.html
+++ b/Frontend/Cantine/src/app/admin/dashbord/admin-dashboard/sign-up/sign-up.component.html
@@ -82,8 +82,12 @@
                             <div *ngIf="f['email'].errors['pattern']" class="center">
                                 Format  Email  incorrect pattern
                             </div>
-
                         </div>
+
+                        <div *ngIf="submitted && existEmail && !f['email'].errors " class="center">
+                            Email  existe déja
+                        </div>
+
                     </div>
 
 
