--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -62,7 +62,7 @@
 
             <div class="account-state center">
                 <div  *ngIf="disabled_account" class="disabled-account">
-                    <p style=" color :  red "> Votre compte n'est pas Activer <br> <span style="color: #004a9f">Cliquer  ici  pour activer </span>
+                    <p style=" color :  red "> Votre compte n'est pas Activer <br> <span style="color: #004a9f  ;  cursor:pointer">Cliquer  ici  pour activer </span>
                     </p>
 
                 </div>
