--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -62,7 +62,8 @@
 
             <div class="account-state center">
                 <div  *ngIf="disabled_account" class="disabled-account">
-                    <p style=" color :  red "> Votre compte n'est pas Activer <br> <span style="color: #004a9f  ;  cursor:pointer">Cliquer  ici  pour activer </span>
+                    <p style=" color :  red "> Votre compte n'est pas Activer <br> <span style="color: #004a9f  ;  cursor:pointer"
+                    (click)="sendTokenToActivateAccount()">Cliquer  ici  pour activer </span>
                     </p>
 
                 </div>
@@ -95,3 +96,20 @@
         </form>
     </div>
 </div>
+
+<ng-template #loadingTemplate >
+    <!-- Afficher le spinner ici pendant le chargement -->
+    <div class="spinner-container">
+        <mat-progress-spinner mode="indeterminate"></mat-progress-spinner>
+    </div>
+
+</ng-template>
+
+<style>
+    .spinner-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 15vh;
+    }
+</style>
