--- a/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/authentication/authentication.component.html
@@ -60,7 +60,7 @@
 
 
 
-            <div class="account-state center">
+            <div class="account-state center"  *ngIf="!isLoading;  else loadingTemplate">
                 <div  *ngIf="disabled_account" class="disabled-account">
                     <p style=" color :  red "> Votre compte n'est pas Activer <br> <span style="color: #004a9f  ;  cursor:pointer"
                     (click)="sendTokenToActivateAccount()">Cliquer  ici  pour activer </span>
