check token  validity  secessfully

--- a/Frontend/Cantine/src/app/core-cantine/confirmation-token/confirmation-token.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/confirmation-token/confirmation-token.component.html
@@ -3,11 +3,15 @@
 
 <div class="container">
     <div class="row">
-          <div class="center">
+          <div *ngIf="activated" class="center">
                 <img src="assets/images/confirm-icon.png" width="40%">
           </div>
 
+        <div *ngIf="!activated" class="center">
+            <img src="assets/images/wrong.png" width="40%">
+        </div>
+
           
     </div>
-      <p class="center">  Si  Le  compte  est   valider  ou  pas   </p>
+      <h1 class="center">  {{serverResponse}}  </h1>
 </div>
