make  the  authentication  token  in  the  local storage

--- a/Frontend/Cantine/src/app/core-cantine/home/home.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/home/home.component.html
@@ -22,7 +22,7 @@
                 <div class="col-md-4 col-sm-12 ">
                     <div class="images-presentation">
                         <h4> Nos Menus </h4>
-                        <img alt="No s  menus " src="../../../assets/images/menuRE.jpg">
+                        <img  (click)="goToMenus()"  alt="Nos  menus " src="../../../assets/images/menuRE.jpg">
                     </div>
                 </div>
 
@@ -30,7 +30,7 @@
                 <div class=" col-md-4  col-sm-12 ">
                     <div class="images-presentation">
                         <h4> Nos Plats </h4>
-                        <img alt="No s  menus " src="../../../assets/images/mealRE.jpg">
+                        <img (click)="goToMeals()"  alt="No s  menus " src="../../../assets/images/mealRE.jpg">
                     </div>
                 </div>
 
@@ -56,3 +56,5 @@
 
 
 </section>
+
+
