update  menu  and  meal  component

--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -31,4 +31,9 @@
         </div>
     </div>
 
+    <div  class="center btn"  (click)="goback()">
+        <mat-icon>arrow_back</mat-icon> retour
+    </div>
+
+
 
