--- a/Frontend/Cantine/src/assets/styles/home.component.scss
+++ b/Frontend/Cantine/src/assets/styles/home.component.scss
@@ -76,6 +76,7 @@ section {
     }
 
     img:hover {
+      cursor: pointer;
       transform: scale(0.9);
       transition: transform 0.3s ease;
     }
