--- a/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/menu/menu.component.html
@@ -6,7 +6,7 @@
 
 
 
-    <h1 class="center"> Nos  Plats   </h1>
+    <h1 class="center"> Nos  Menus    </h1>
 
     <div  class="container-fluid red" >
         <div class="row">
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                     <div>
-                        <button class="btn"> Ajouter Le Menu </button>
+                        <button class="btn" (click)="addToOrder()"> Ajouter Le Menu </button>
                     </div>
                 </div>
             </div>
