update   user  model

--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -53,7 +53,7 @@
 
         <mat-divider></mat-divider>
 
-        <button class="menu-button" mat-button>
+        <button class="menu-button" mat-button (click)="goToHome()">
             <mat-icon>home</mat-icon>
             <span>Home</span>
         </button>
